tests/expectations/parser/identifiers/long_identifier_fail.out
Error [EPAR0370044]: Identifier S012345678901234567890123456789q is too long (32 bytes; maximum is 31)
    --> test:19:8
     |
  19 | struct S012345678901234567890123456789q {
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370044]: Identifier m012345678901234567890123456789q is too long (32 bytes; maximum is 31)
    --> test:20:5
     |
  20 |     m012345678901234567890123456789q: u8,
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370044]: Identifier x012345678901234567890123456789q is too long (32 bytes; maximum is 31)
    --> test:23:4
     |
  23 | fn x012345678901234567890123456789q(y012345678901234567890123456789q: u8) -> u8 {
     |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370044]: Identifier y012345678901234567890123456789q is too long (32 bytes; maximum is 31)
    --> test:23:37
     |
  23 | fn x012345678901234567890123456789q(y012345678901234567890123456789q: u8) -> u8 {
     |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370044]: Identifier z012345678901234567890123456789q is too long (32 bytes; maximum is 31)
    --> test:24:9
     |
  24 |     let z012345678901234567890123456789q: u8 = 1u8;
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
